--- a/app/sass/globals/_typography.scss
+++ b/app/sass/globals/_typography.scss
@@ -3,9 +3,9 @@ h2,
 h3,
 h4 {
   font-weight: 700;
-  line-height: 1.1;
+  line-height: 1.3;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 1rem;
   font-family: "Prata", serif !important;
   color: white;
 }
@@ -13,7 +13,7 @@ h4 {
 p {
   margin-top: 0;
   margin-bottom: 0;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 a,
