add project section

--- a/app/sass/layout/_main.scss
+++ b/app/sass/layout/_main.scss
@@ -1,5 +1,8 @@
 main {
   margin-top: 10rem;
+  .card {
+    max-width: 520px;
+  }
 }
 
 main {
@@ -14,6 +17,20 @@ main {
 
 main {
   .companies {
-    margin: 3rem 0;
+    margin: 4rem 0;
+  }
+}
+
+main {
+  .projects {
+    img {
+      margin-bottom: 1rem;
+      border-radius: 5px;
+      width: 100%;
+    }
+    h1 {
+      font-weight: 500;
+      font-size: 2rem;
+    }
   }
 }
