--- a/app/sass/layout/_main.scss
+++ b/app/sass/layout/_main.scss
@@ -1,5 +1,8 @@
 main {
   margin-top: 10rem;
+  section:not(.summary, .companies) {
+    padding: 4rem 0;
+  }
   .card {
     max-width: 520px;
   }
@@ -17,7 +20,7 @@ main {
 
 main {
   .companies {
-    margin: 4rem 0;
+    margin-top: 4rem;
   }
 }
 
@@ -32,5 +35,27 @@ main {
       font-weight: 500;
       font-size: 2rem;
     }
+  }
+}
+main {
+  .experience {
+    position: relative;
+    background: #31323a;
+    p:not(p:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+  .experience::after,
+  .experience::before {
+    content: "";
+    background: #31323a;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    right: -100%;
+    overflow: hidden;
+  }
+  .experience::before {
+    left: -100%;
   }
 }
