add cta section

--- a/app/sass/layout/_main.scss
+++ b/app/sass/layout/_main.scss
@@ -41,6 +41,10 @@ main {
   .experience {
     position: relative;
     background: #31323a;
+    h1 {
+      font-weight: 500;
+      font-size: 2rem;
+    }
     p:not(p:last-child) {
       margin-bottom: 1rem;
     }
@@ -57,5 +61,17 @@ main {
   }
   .experience::before {
     left: -100%;
+  }
+}
+
+main {
+  .cta {
+    h1 {
+      font-weight: 500;
+      font-size: 2rem;
+    }
+    p {
+      margin-bottom: 2rem;
+    }
   }
 }
