--- a/app/sass/globals/_typography.scss
+++ b/app/sass/globals/_typography.scss
@@ -5,7 +5,7 @@ h4 {
   font-weight: 700;
   line-height: 1.3;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   font-family: "Prata", serif !important;
   color: white;
 }
@@ -19,6 +19,7 @@ p {
 a,
 a:visited,
 a:active {
+  display: inline-block;
   text-decoration: none;
   color: inherit;
 }
