--- a/app/sass/layout/_container.scss
+++ b/app/sass/layout/_container.scss
@@ -1,5 +1,7 @@
 .container {
   max-width: 1200px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   margin: 0 auto;
   .flex {
     display: flex;
@@ -11,3 +13,9 @@
     justify-content: space-between;
   }
 }
+
+// @include u.breakpoint("700") {
+//   display: none;
+// }
+
+// @use "../utils/" as u;
